--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,6 +45,7 @@ file.reference.junit-3.8.1.jar=libs/junit-3.8.1.jar
 file.reference.log4j-1.2.16.jar=libs/log4j-1.2.16.jar
 file.reference.mailapi.jar=libs/mailapi.jar
 file.reference.ognl-2.7.3.jar=libs/ognl-2.7.3.jar
+file.reference.ojdbc6.jar=C:\\Users\\miracle1\\Desktop\\ojdbc6.jar
 file.reference.poi-3.9-20121203.jar=libs/poi-3.9-20121203.jar
 file.reference.poi-ooxml-3.8.jar=libs/poi-ooxml-3.8.jar
 file.reference.pop3.jar=libs/pop3.jar
@@ -91,7 +92,8 @@ javac.classpath=\
     ${file.reference.itext-2.1.5.jar}:\
     ${file.reference.jcommon-1.0.17.jar}:\
     ${file.reference.jfreechart.jar}:\
-    ${file.reference.poi-ooxml-3.8.jar}
+    ${file.reference.poi-ooxml-3.8.jar}:\
+    ${file.reference.ojdbc6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
