CJ_LTShipmet,LTInv,LTReports,CodeList screen aligns

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,19 +39,21 @@ file.reference.db2jcc.jar=libs/db2jcc.jar
 file.reference.db2jcc_license_cu.jar=libs/db2jcc_license_cu.jar
 file.reference.freemarker-2.3.15.jar=libs/freemarker-2.3.15.jar
 file.reference.itext-2.1.5.jar=libs/itext-2.1.5.jar
+file.reference.java-json.jar=libs/java-json.jar
 file.reference.jcommon-1.0.17.jar=libs/jcommon-1.0.17.jar
 file.reference.jfreechart.jar=libs/jfreechart.jar
 file.reference.junit-3.8.1.jar=libs/junit-3.8.1.jar
 file.reference.log4j-1.2.16.jar=libs/log4j-1.2.16.jar
 file.reference.mailapi.jar=libs/mailapi.jar
 file.reference.ognl-2.7.3.jar=libs/ognl-2.7.3.jar
-file.reference.ojdbc6.jar=C:\\Users\\miracle1\\Desktop\\ojdbc6.jar
+file.reference.ojdbc6.jar=libs/ojdbc6.jar
 file.reference.poi-3.9-20121203.jar=libs/poi-3.9-20121203.jar
 file.reference.poi-ooxml-3.8.jar=libs/poi-ooxml-3.8.jar
 file.reference.pop3.jar=libs/pop3.jar
 file.reference.smtp.jar=libs/smtp.jar
 file.reference.struts2-core-2.1.8.1.jar=libs/struts2-core-2.1.8.1.jar
 file.reference.struts2-dojo-plugin-2.1.2.jar=libs/struts2-dojo-plugin-2.1.2.jar
+file.reference.struts2-json-plugin-2.1.8.1.jar=libs/struts2-json-plugin-2.1.8.1.jar
 file.reference.xdoclet-1.2.2.jar=libs/xdoclet-1.2.2.jar
 file.reference.xml-apis.jar=libs/xml-apis.jar
 file.reference.xwork-core-2.1.6.jar=libs/xwork-core-2.1.6.jar
@@ -93,7 +95,9 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.17.jar}:\
     ${file.reference.jfreechart.jar}:\
     ${file.reference.poi-ooxml-3.8.jar}:\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.struts2-json-plugin-2.1.8.1.jar}:\
+    ${file.reference.ojdbc6.jar}:\
+    ${file.reference.java-json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
